--- a/ManagerIO_ConvertToTransfer/ManagerIO_ConvertToTransfer.csproj
+++ b/ManagerIO_ConvertToTransfer/ManagerIO_ConvertToTransfer.csproj
@@ -8,8 +8,7 @@
     <RootNamespace>ManagerIO_ConvertToTransfer</RootNamespace>
     <AssemblyName>ManagerIO_ConvertToTransfer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
+    <ReleaseVersion>1.0.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
